--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 <body>
 <header>
   <h1>PDK Cells Catalog</h1>
-  <p class="sub">Generated: 2025-12-16 18:32:26 • Build: static HTML (matplotlib renderer)</p>
+  <p class="sub">Generated: 2025-12-16 18:53:31 • Build: static HTML (matplotlib renderer)</p>
 </header>
 
 <div class="wrap">
@@ -705,7 +705,7 @@ A <code class='md-inline'>gf.Component</code> containing the JJ cross + bar patc
 </ul>
                       </div>
 
-                      <div class="kvlist"><div class='kv'><span class='k'>eps_eff_ref</span><span class='v'>6.64376472</span></div><div class='kv'><span class='k'>f_target_GHz</span><span class='v'>6.0</span></div><div class='kv'><span class='k'>length_total_um_est</span><span class='v'>4846.211224674057</span></div><div class='kv'><span class='k'>n_eff_ref</span><span class='v'>2.5775501391825535</span></div></div>
+                      <div class="kvlist"><div class='kv'><span class='k'>eps_eff_ref</span><span class='v'>6.0</span></div><div class='kv'><span class='k'>f_target_GHz</span><span class='v'>6.0</span></div><div class='kv'><span class='k'>length_total_um_est</span><span class='v'>5099.573269685811</span></div><div class='kv'><span class='k'>n_eff_ref</span><span class='v'>2.449489742783178</span></div></div>
                     </div>
                   </div>
                 </section>
@@ -743,7 +743,7 @@ A <code class='md-inline'>gf.Component</code> containing the JJ cross + bar patc
 <p class='md-p'>Raises:<br>    ValueError if:<br><ul class='md-ul'><br><li>num_bends &lt; 1, or</li><br><li>L_target &lt; num_bends * (πR + seg_length_um)  (not enough for serpentine), or</li><br><li>seg_length_um &lt; (πR/2 + L_coupler_um)       (not enough for coupler at end)</li><br></ul></p>
                       </div>
 
-                      <div class="kvlist"><div class='kv'><span class='k'>L_coupler_um</span><span class='v'>100.0</span></div><div class='kv'><span class='k'>L_target_um</span><span class='v'>4153.895335434906</span></div><div class='kv'><span class='k'>bend90_len_um</span><span class='v'>94.24777960769379</span></div><div class='kv'><span class='k'>bend_len_um</span><span class='v'>188.49555921538757</span></div><div class='kv'><span class='k'>eps_eff_ref</span><span class='v'>6.64376472</span></div><div class='kv'><span class='k'>f_target_GHz</span><span class='v'>7.0</span></div><div class='kv'><span class='k'>leftover_um</span><span class='v'>328.67420053488695</span></div><div class='kv'><span class='k'>n_eff_ref</span><span class='v'>2.5775501391825535</span></div><div class='kv'><span class='k'>num_bends</span><span class='v'>6</span></div><div class='kv'><span class='k'>radius_um</span><span class='v'>60.0</span></div><div class='kv'><span class='k'>seg_length_um</span><span class='v'>300.0</span></div></div>
+                      <div class="kvlist"><div class='kv'><span class='k'>L_coupler_um</span><span class='v'>100.0</span></div><div class='kv'><span class='k'>L_target_um</span><span class='v'>4371.062802587839</span></div><div class='kv'><span class='k'>bend90_len_um</span><span class='v'>94.24777960769379</span></div><div class='kv'><span class='k'>bend_len_um</span><span class='v'>188.49555921538757</span></div><div class='kv'><span class='k'>eps_eff_ref</span><span class='v'>6.0</span></div><div class='kv'><span class='k'>f_target_GHz</span><span class='v'>7.0</span></div><div class='kv'><span class='k'>leftover_um</span><span class='v'>545.8416676878196</span></div><div class='kv'><span class='k'>n_eff_ref</span><span class='v'>2.449489742783178</span></div><div class='kv'><span class='k'>num_bends</span><span class='v'>6</span></div><div class='kv'><span class='k'>radius_um</span><span class='v'>60.0</span></div><div class='kv'><span class='k'>seg_length_um</span><span class='v'>300.0</span></div></div>
                     </div>
                   </div>
                 </section>
