--- a/cells.html
+++ b/cells.html
@@ -29,10 +29,10 @@
 
 <header>
   <div class="header-row">
-    <div>
+    <!-- <div>
       <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 Quintessence Foundry Services <span class="home-hint">· Home</span></a></h1>
       <p class="sub sub-empty"></p>
-    </div>
+    </div> -->
     <div class="header-meta mono">planar</div>
   </div>
   <nav class='topnav is-hidden'><a class='nav-link' href='index.html'>Overview</a><a class='nav-link is-active' href='cells.html'>Cells</a><a class='nav-link' href='layer_stack.html'>Layer Stack</a><a class='nav-link' href='design_rules.html'>Design Rules</a></nav>
@@ -2351,3 +2351,4 @@
 
 </body>
 </html>
+
