Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Foundry Services</title>
+<title>Process Development Kit</title>
 <link rel="stylesheet" href="assets/app.css">
 <script defer src="assets/app.js"></script>
 </head>
@@ -30,8 +30,8 @@
 <header>
   <div class="header-row">
     <div>
-      <!-- <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 Quintessence Foundry Services <span class="home-hint">· Home</span></a></h1> -->
-      <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit<span class="home-hint">· Home</span></a></h1>
+      <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 Quintessence Foundry Services <span class="home-hint">· Home</span></a></h1>
+      <!-- <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit<span class="home-hint">· Home</span></a></h1> -->
       <p class="sub sub-empty"></p>
     </div>
     <div class="header-meta is-hidden mono">planar</div>
@@ -115,4 +115,5 @@
 
 </body>
 </html>
+
 
