Fix formatting issues in design_rules.html

--- a/design_rules.html
+++ b/design_rules.html
@@ -30,8 +30,8 @@
 <header>
   <div class="header-row">
     <div>
-      <!-- <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 Quintessence Foundry Services <span class="home-hint">· Home</span></a></h1> -->
-      <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit<span class="home-hint">· Home</span></a></h1>
+      <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 Quintessence Foundry Services <span class="home-hint">· Home</span></a></h1>
+      <!-- <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit<span class="home-hint">· Home</span></a></h1> -->
       <p class="sub sub-empty"></p>
     </div>
     <div class="header-meta mono">planar</div>
@@ -180,3 +180,4 @@
 
 </body>
 </html>
+
