--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <header>
   <div class="header-row">
     <div>
-      <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 Quintessence Foundry Services <span class="home-hint">· Home</span></a></h1>
+      <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit © 2026 iQnite Foundry Services <span class="home-hint">· Home</span></a></h1>
       <!-- <h1 class="site-title"><a class="site-title-link" href="index.html">Process Development Kit<span class="home-hint">· Home</span></a></h1> -->
       <p class="sub sub-empty"></p>
     </div>
