--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </div>
     <div class="hero-badges mono">
       <div class="badge">Sections <strong>6</strong></div>
-      <div class="badge">Cells <strong>21</strong></div>
-      <div class="badge">Build <strong>2026-02-05</strong></div>
+      <div class="badge">Cells <strong>19</strong></div>
+      <div class="badge">Build <strong>2026-02-22</strong></div>
     </div>
   </div>
 
@@ -71,6 +71,10 @@
       <div class="card-meta mono">Layout guardrails</div>
     </a>
   </div>
+  <div class="overview-demo">
+    <div class="overview-demo-title">PDK Usage Walkthrough</div>
+    <img class="overview-demo-gif" src="pdk_usage_ex.gif" alt="PDK usage walkthrough" loading="lazy">
+  </div>
 </section>
 
 <section class="overview-hero is-secondary is-hidden">
@@ -83,7 +87,7 @@
     <div class="hero-badges mono">
       <div class="badge">Sections <strong>0</strong></div>
       <div class="badge">Cells <strong>0</strong></div>
-      <div class="badge">Build <strong>2026-02-05</strong></div>
+      <div class="badge">Build <strong>2026-02-22</strong></div>
     </div>
   </div>
 
@@ -104,17 +108,15 @@
       <div class="card-meta mono">Coming soon</div>
     </a>
   </div>
+  
 </section>
 </div>
 
 <footer>
   <div>For evaluation use only.</div>
   <div>Authorized distribution by Wen-Sen Lu.</div>
-  <div>Generated: 2026-02-05 00:42:35</div>
+  <div>Generated: 2026-02-22 08:43:34</div>
 </footer>
 
 </body>
 </html>
-
-
-
