Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </a>
   </div>
   <div class="overview-demo">
-    <div class="overview-demo-title">PDK Usage Walkthrough</div>
-    <img class="overview-demo-gif" src="pdk_usage_ex.gif" alt="PDK usage walkthrough" loading="lazy">
+    <div class="overview-demo-title">Site Usage Walkthrough</div>
+    <img class="overview-demo-gif" src="pdk_usage_ex.gif" alt="Site usage walkthrough" loading="lazy">
   </div>
 </section>
 
@@ -120,3 +120,4 @@
 
 </body>
 </html>
+
